--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+html,
+body {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+  height: 100%;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.split-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  height: calc(100% - 60px);
+  padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.split-box {
+  box-sizing: border-box;
+  padding: 1em;
+  /* border: thin solid black; */
+  border-radius: 10px;
+  margin: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-container {
+  display: flex;
+  flex-direction: row;
+  /* height: 100%; */
+  /* padding: 5px; */
+}
+
+.input-card {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: aliceblue;
+  border: thin solid black;
+  margin: 10px 3px;
+  position: relative;
+}
+
+.label {
+  margin-right: 5px;
+}
+
+.val {
+  margin-right: 5px;
+}
+
+input[type=text] {
+  margin-bottom: 10px;
+  /* margin-top: 15px; */
+}
+
+input[type=text], input[type=number]{
+  width: 85%;
+}
+
+#close-btn {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  background-color: aliceblue;
+  border: none;
+  /* font-size: smaller; */
+  font-weight: 500;
+  color: red;
+}
+
+.containerr {
+  text-align: center;
+  margin-top: 230px;
 }
