--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
 }
 
 .split-box {
+  overflow-y: scroll;
   box-sizing: border-box;
   padding: 1em;
   /* border: thin solid black; */
@@ -49,11 +50,12 @@ body {
 
 input[type=text] {
   margin-bottom: 10px;
+  width: 91%;
   /* margin-top: 15px; */
 }
 
-input[type=text], input[type=number]{
-  width: 85%;
+input[type=number]{
+  width: 78%;
 }
 
 #close-btn {
@@ -70,4 +72,39 @@ input[type=text], input[type=number]{
 .containerr {
   text-align: center;
   margin-top: 230px;
+}
+
+#colButton {
+  position: absolute;
+  bottom: 10px;
+  right: 40px;
+  width: 30px;
+  height: 1.9em;
+}
+
+.homepage-card {
+  width: 150px;
+  height: 125px;
+  background-color: aqua;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 1em;
+}
+
+.card-flex {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  text-align: center;
+}
+
+.card-flex a{
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: xx-large;
+  color: white;
+}
+
+#homepage p{
+  padding: 0px 20px;
 }
