--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,22 @@ input[type=number]{
 #homepage p{
   padding: 0px 20px;
 }
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #0D6EFD;
+    border-radius: 5px;
+    color: white
+}
+
+#btn-box {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
